--- a/src/main.css
+++ b/src/main.css
@@ -6,14 +6,14 @@
 }
 
 .btn-secondary {
-    @apply bg-secondary-500 text-white;
+    @apply bg-secondary text-white;
 }
 .btn-secondary:hover {
-    @apply bg-secondary-700
+    @apply bg-secondary
 }
 
 .contact-icon {
-    @apply fill-current w-4 h-4 mr-4 text-secondary-500;
+    @apply fill-current w-4 h-4 mr-4 text-secondary;
 }
 
 .contact-link {
@@ -21,11 +21,11 @@
 }
 
 .contact-link:hover {
-    @apply text-secondary-500;
+    @apply text-secondary;
 }
 
 .section-header {
-    @apply text-primary-500 text-xl border-l-4 border-primary-500 pl-3 font-bold;
+    @apply text-primary text-xl border-l-4 border-primary pl-3 font-bold;
 }
 
 .item-header {
@@ -41,11 +41,11 @@
 }
 
 .footer-social-link {
-    @apply text-primary-900 mr-4;
+    @apply text-primary mr-4;
 }
 
 .footer-social-link:hover {
-    @apply text-primary-500;
+    @apply text-primary;
 }
 
 .footer-social-icon {
